trunk/Archive2/59/253a17edeef3f4/output
main.cpp: In function 'int main()':
main.cpp:27:17: error: no matching function for call to 'D<A1>::D(int, int)'
     D<A1> d1(1,1);
                 ^
main.cpp:27:17: note: candidates are:
main.cpp:20:8: note: constexpr D<A1>::D(const D<A1>&)
 struct D : T
        ^
main.cpp:20:8: note:   candidate expects 1 argument, 2 provided
main.cpp:20:8: note: constexpr D<A1>::D(D<A1>&&)
main.cpp:20:8: note:   candidate expects 1 argument, 2 provided
